src/G4/MindLangParser.ts
// Generated from ./MindLang.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { MindLangListener } from "./MindLangListener";
import { MindLangVisitor } from "./MindLangVisitor";


export class MindLangParser extends Parser {
	public static readonly LET = 1;
	public static readonly WHILE = 2;
	public static readonly PRINT = 3;
	public static readonly IF = 4;
	public static readonly ELSE = 5;
	public static readonly FUNCTION = 6;
	public static readonly FOR = 7;
	public static readonly RETURN = 8;
	public static readonly BREAK = 9;
	public static readonly IDENTIFIER = 10;
	public static readonly NUMBER = 11;
	public static readonly STRING = 12;
	public static readonly PLUS = 13;
	public static readonly MINUS = 14;
	public static readonly MULT = 15;
	public static readonly DIV = 16;
	public static readonly MOD = 17;
	public static readonly ASSIGN = 18;
	public static readonly PLUS_ASSIGN = 19;
	public static readonly EQ = 20;
	public static readonly LT = 21;
	public static readonly GT = 22;
	public static readonly LE = 23;
	public static readonly GE = 24;
	public static readonly SEMICOLON = 25;
	public static readonly COMMA = 26;
	public static readonly LPAREN = 27;
	public static readonly RPAREN = 28;
	public static readonly LBRACE = 29;
	public static readonly RBRACE = 30;
	public static readonly LBRACKET = 31;
	public static readonly RBRACKET = 32;
	public static readonly DOT = 33;
	public static readonly INCREMENT = 34;
	public static readonly DECREMENT = 35;
	public static readonly LINE_COMMENT = 36;
	public static readonly BLOCK_COMMENT = 37;
	public static readonly WHITESPACE = 38;
	public static readonly RULE_program = 0;
	public static readonly RULE_block = 1;
	public static readonly RULE_statementOrBlock = 2;
	public static readonly RULE_statement = 3;
	public static readonly RULE_variableDeclaration = 4;
	public static readonly RULE_assignmentStatement = 5;
	public static readonly RULE_printStatement = 6;
	public static readonly RULE_ifStatement = 7;
	public static readonly RULE_elseIfClause = 8;
	public static readonly RULE_elseClause = 9;
	public static readonly RULE_whileStatement = 10;
	public static readonly RULE_forStatement = 11;
	public static readonly RULE_functionDeclaration = 12;
	public static readonly RULE_functionCall = 13;
	public static readonly RULE_returnStatement = 14;
	public static readonly RULE_incrementDecrementStatement = 15;
	public static readonly RULE_breakStatement = 16;
	public static readonly RULE_expression = 17;
	public static readonly RULE_unaryExpression = 18;
	public static readonly RULE_primaryExpression = 19;
	public static readonly RULE_basePrimaryExpression = 20;
	public static readonly RULE_postfixOp = 21;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "block", "statementOrBlock", "statement", "variableDeclaration", 
		"assignmentStatement", "printStatement", "ifStatement", "elseIfClause", 
		"elseClause", "whileStatement", "forStatement", "functionDeclaration", 
		"functionCall", "returnStatement", "incrementDecrementStatement", "breakStatement", 
		"expression", "unaryExpression", "primaryExpression", "basePrimaryExpression", 
		"postfixOp",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'let'", "'while'", "'print'", "'if'", "'else'", "'function'", 
		"'for'", "'return'", "'break'", undefined, undefined, undefined, "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'='", "'+='", "'=='", "'<'", "'>'", "'<='", 
		"'>='", "';'", "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", 
		"'++'", "'--'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "LET", "WHILE", "PRINT", "IF", "ELSE", "FUNCTION", "FOR", "RETURN", 
		"BREAK", "IDENTIFIER", "NUMBER", "STRING", "PLUS", "MINUS", "MULT", "DIV", 
		"MOD", "ASSIGN", "PLUS_ASSIGN", "EQ", "LT", "GT", "LE", "GE", "SEMICOLON", 
		"COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
		"DOT", "INCREMENT", "DECREMENT", "LINE_COMMENT", "BLOCK_COMMENT", "WHITESPACE",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(MindLangParser._LITERAL_NAMES, MindLangParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return MindLangParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "MindLang.g4"; }

	// @Override
	public get ruleNames(): string[] { return MindLangParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return MindLangParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(MindLangParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, MindLangParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 47;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MindLangParser.LET) | (1 << MindLangParser.WHILE) | (1 << MindLangParser.PRINT) | (1 << MindLangParser.IF) | (1 << MindLangParser.FUNCTION) | (1 << MindLangParser.FOR) | (1 << MindLangParser.RETURN) | (1 << MindLangParser.BREAK) | (1 << MindLangParser.IDENTIFIER))) !== 0)) {
				{
				{
				this.state = 44;
				this.statement();
				}
				}
				this.state = 49;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, MindLangParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 50;
			this.match(MindLangParser.LBRACE);
			this.state = 54;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MindLangParser.LET) | (1 << MindLangParser.WHILE) | (1 << MindLangParser.PRINT) | (1 << MindLangParser.IF) | (1 << MindLangParser.FUNCTION) | (1 << MindLangParser.FOR) | (1 << MindLangParser.RETURN) | (1 << MindLangParser.BREAK) | (1 << MindLangParser.IDENTIFIER))) !== 0)) {
				{
				{
				this.state = 51;
				this.statement();
				}
				}
				this.state = 56;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 57;
			this.match(MindLangParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statementOrBlock(): StatementOrBlockContext {
		let _localctx: StatementOrBlockContext = new StatementOrBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, MindLangParser.RULE_statementOrBlock);
		try {
			this.state = 61;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MindLangParser.LBRACE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 59;
				this.block();
				}
				break;
			case MindLangParser.LET:
			case MindLangParser.WHILE:
			case MindLangParser.PRINT:
			case MindLangParser.IF:
			case MindLangParser.FUNCTION:
			case MindLangParser.FOR:
			case MindLangParser.RETURN:
			case MindLangParser.BREAK:
			case MindLangParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 60;
				this.statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, MindLangParser.RULE_statement);
		try {
			this.state = 76;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 63;
				this.variableDeclaration();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 64;
				this.assignmentStatement();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 65;
				this.printStatement();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 66;
				this.ifStatement();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 67;
				this.whileStatement();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 68;
				this.forStatement();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 69;
				this.functionDeclaration();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 70;
				this.functionCall();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 71;
				this.returnStatement();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 72;
				this.incrementDecrementStatement();
				this.state = 73;
				this.match(MindLangParser.SEMICOLON);
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 75;
				this.breakStatement();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let _localctx: VariableDeclarationContext = new VariableDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, MindLangParser.RULE_variableDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this.match(MindLangParser.LET);
			this.state = 79;
			this.match(MindLangParser.IDENTIFIER);
			this.state = 80;
			this.match(MindLangParser.ASSIGN);
			this.state = 81;
			this.expression();
			this.state = 82;
			this.match(MindLangParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignmentStatement(): AssignmentStatementContext {
		let _localctx: AssignmentStatementContext = new AssignmentStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, MindLangParser.RULE_assignmentStatement);
		try {
			this.state = 94;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 84;
				this.match(MindLangParser.IDENTIFIER);
				this.state = 85;
				this.match(MindLangParser.ASSIGN);
				this.state = 86;
				this.expression();
				this.state = 87;
				this.match(MindLangParser.SEMICOLON);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 89;
				this.match(MindLangParser.IDENTIFIER);
				this.state = 90;
				this.match(MindLangParser.PLUS_ASSIGN);
				this.state = 91;
				this.expression();
				this.state = 92;
				this.match(MindLangParser.SEMICOLON);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public printStatement(): PrintStatementContext {
		let _localctx: PrintStatementContext = new PrintStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, MindLangParser.RULE_printStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 96;
			this.match(MindLangParser.PRINT);
			this.state = 97;
			this.match(MindLangParser.LPAREN);
			this.state = 98;
			this.expression();
			this.state = 99;
			this.match(MindLangParser.RPAREN);
			this.state = 100;
			this.match(MindLangParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifStatement(): IfStatementContext {
		let _localctx: IfStatementContext = new IfStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, MindLangParser.RULE_ifStatement);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 102;
			this.match(MindLangParser.IF);
			this.state = 103;
			this.match(MindLangParser.LPAREN);
			this.state = 104;
			this.expression();
			this.state = 105;
			this.match(MindLangParser.RPAREN);
			this.state = 106;
			this.statementOrBlock();
			this.state = 110;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 107;
					this.elseIfClause();
					}
					}
				}
				this.state = 112;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			}
			this.state = 114;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				{
				this.state = 113;
				this.elseClause();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public elseIfClause(): ElseIfClauseContext {
		let _localctx: ElseIfClauseContext = new ElseIfClauseContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, MindLangParser.RULE_elseIfClause);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 116;
			this.match(MindLangParser.ELSE);
			this.state = 117;
			this.match(MindLangParser.IF);
			this.state = 118;
			this.match(MindLangParser.LPAREN);
			this.state = 119;
			this.expression();
			this.state = 120;
			this.match(MindLangParser.RPAREN);
			this.state = 121;
			this.statementOrBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public elseClause(): ElseClauseContext {
		let _localctx: ElseClauseContext = new ElseClauseContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, MindLangParser.RULE_elseClause);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.match(MindLangParser.ELSE);
			this.state = 124;
			this.statementOrBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whileStatement(): WhileStatementContext {
		let _localctx: WhileStatementContext = new WhileStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, MindLangParser.RULE_whileStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 126;
			this.match(MindLangParser.WHILE);
			this.state = 127;
			this.match(MindLangParser.LPAREN);
			this.state = 128;
			this.expression();
			this.state = 129;
			this.match(MindLangParser.RPAREN);
			this.state = 130;
			this.statementOrBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public forStatement(): ForStatementContext {
		let _localctx: ForStatementContext = new ForStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, MindLangParser.RULE_forStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			this.match(MindLangParser.FOR);
			this.state = 133;
			this.match(MindLangParser.LPAREN);
			this.state = 134;
			this.variableDeclaration();
			this.state = 135;
			this.expression();
			this.state = 136;
			this.match(MindLangParser.SEMICOLON);
			this.state = 139;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				{
				this.state = 137;
				this.expression();
				}
				break;

			case 2:
				{
				this.state = 138;
				this.incrementDecrementStatement();
				}
				break;
			}
			this.state = 141;
			this.match(MindLangParser.RPAREN);
			this.state = 142;
			this.statementOrBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let _localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, MindLangParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 144;
			this.match(MindLangParser.FUNCTION);
			this.state = 145;
			this.match(MindLangParser.IDENTIFIER);
			this.state = 146;
			this.match(MindLangParser.LPAREN);
			this.state = 155;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MindLangParser.IDENTIFIER) {
				{
				this.state = 147;
				this.match(MindLangParser.IDENTIFIER);
				this.state = 152;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === MindLangParser.COMMA) {
					{
					{
					this.state = 148;
					this.match(MindLangParser.COMMA);
					this.state = 149;
					this.match(MindLangParser.IDENTIFIER);
					}
					}
					this.state = 154;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 157;
			this.match(MindLangParser.RPAREN);
			this.state = 158;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionCall(): FunctionCallContext {
		let _localctx: FunctionCallContext = new FunctionCallContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, MindLangParser.RULE_functionCall);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 160;
			this.match(MindLangParser.IDENTIFIER);
			this.state = 161;
			this.match(MindLangParser.LPAREN);
			this.state = 170;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MindLangParser.IDENTIFIER) | (1 << MindLangParser.NUMBER) | (1 << MindLangParser.STRING) | (1 << MindLangParser.MINUS) | (1 << MindLangParser.LPAREN) | (1 << MindLangParser.LBRACKET))) !== 0)) {
				{
				this.state = 162;
				this.expression();
				this.state = 167;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === MindLangParser.COMMA) {
					{
					{
					this.state = 163;
					this.match(MindLangParser.COMMA);
					this.state = 164;
					this.expression();
					}
					}
					this.state = 169;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 172;
			this.match(MindLangParser.RPAREN);
			this.state = 173;
			this.match(MindLangParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public returnStatement(): ReturnStatementContext {
		let _localctx: ReturnStatementContext = new ReturnStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, MindLangParser.RULE_returnStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 175;
			this.match(MindLangParser.RETURN);
			this.state = 176;
			this.expression();
			this.state = 177;
			this.match(MindLangParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public incrementDecrementStatement(): IncrementDecrementStatementContext {
		let _localctx: IncrementDecrementStatementContext = new IncrementDecrementStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, MindLangParser.RULE_incrementDecrementStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 179;
			this.match(MindLangParser.IDENTIFIER);
			this.state = 180;
			_la = this._input.LA(1);
			if (!(_la === MindLangParser.INCREMENT || _la === MindLangParser.DECREMENT)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public breakStatement(): BreakStatementContext {
		let _localctx: BreakStatementContext = new BreakStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, MindLangParser.RULE_breakStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 182;
			this.match(MindLangParser.BREAK);
			this.state = 183;
			this.match(MindLangParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, MindLangParser.RULE_expression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 185;
			this.unaryExpression();
			this.state = 190;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MindLangParser.PLUS) | (1 << MindLangParser.MINUS) | (1 << MindLangParser.MULT) | (1 << MindLangParser.DIV) | (1 << MindLangParser.MOD) | (1 << MindLangParser.EQ) | (1 << MindLangParser.LT) | (1 << MindLangParser.GT) | (1 << MindLangParser.LE) | (1 << MindLangParser.GE))) !== 0)) {
				{
				{
				this.state = 186;
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MindLangParser.PLUS) | (1 << MindLangParser.MINUS) | (1 << MindLangParser.MULT) | (1 << MindLangParser.DIV) | (1 << MindLangParser.MOD) | (1 << MindLangParser.EQ) | (1 << MindLangParser.LT) | (1 << MindLangParser.GT) | (1 << MindLangParser.LE) | (1 << MindLangParser.GE))) !== 0))) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}
